# jvmm

./: .stylish-haskell.yaml  Makefile  README-EXTENSIONS.md  README-TESTS.md  README.md  TODO  generic-test-runner.sh  jvmm.cabal  jvmm_bin  jvmmc_check  jvmmc_jvm  jvmmc_llvm  jvmmc_parse  jvmmi  latc_check  latc_jvm  run_examples.sh  test-run-generic.sh
Interpreter/: Main.hs
Semantics/: Builtins.hs  Commons.hs  Errors.hs  Runtime.hs  Scope.hs  Trans.hs  Types.hs
docs/: Jvmm-intro.md  Jvmm.cf  jvmm-description.md  jvmm-grammar.cf
examples_bad/: bad015.jv  bad023.jv
examples_good/: array_new.jv  assignopsarr.jv  assignopsarr.output  conflict001.jv  conflict002.jv  core001.jv  core012.jv  core012.output  defaults001.jv  example001.input  example001.jv  exceptions001.jv  exceptions001.output  exceptions002.jv  exceptions002.output  gchiddenstack.jv  gcstress.jv  gcstress.output  scope001.jv  scope002.jv  scope002.output  scope003.jv  simple001.jv  unaryexpressions.jv
lib/: Runtime.java  runtime.c  runtime.ll
src/: Makefile  Syntax.diff
src/Interpreter/: Main.hs
src/Jvmm/: Analyser.hs  Builtins.hs  Errors.hs  Hierarchy.hs  Interpreter.hs  JvmEmitter.hs  LlvmEmitter.hs  Main.hs  Scope.hs  Trans.hs  Types.hs  Verifier.hs  Virtuals.hs  Workflows.hs
src/Semantics/: APTree.hs  Builtins.hs  Commons.hs  Errors.hs  Hierarchy.hs  Imperative.hs  Runtime.hs  Scope.hs  Trans.hs  Types.hs  Virtuals.hs
src/Syntax/: AbsJvmm.hs  ErrM.hs  LexJvmm.hs  ParJvmm.hs  PrintJvmm.hs  SkelJvmm.hs  (+1 more)
test-jvmm/: test-run.sh
test-latte/: test-run.sh
test-mrjp/: test-run.sh
(+92 files in other folders)
