name:                 jvmm
version:              0.1.0.0
synopsis:             A Java-like interpreted and compiled language written in Haskell.
-- description:
homepage:             https://github.com/stupaq/jvmm
-- license:
-- license-file:
author:               Mateusz Machalica
maintainer:           mateuszmachalica@gmail.com
-- copyright:
-- category:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.8

executable jvmm
  main-is:            Main.hs
  build-depends:      base >=4.6 && <4.7, mtl >=2.1 && <2.2, containers >=0.5 && <0.6,
                      filepath >=1.3 && <1.4, text >=0.11 && <0.12, array >=0.4 && <0.5,
                      llvm-general-pure >=3.3 && <3.4, llvm-general >=3.3 && <3.4
  hs-source-dirs:     src
  ghc-options:        -W -Wall -fwarn-tabs -fwarn-unrecognised-pragmas
                      -fno-warn-unused-do-bind -fwarn-monomorphism-restriction

